Mas avances en la API
