# docs/swagger.yaml
@@ -36,16 +36,22 @@ definitions:
   service.Movie:
     properties:
       duration_minutes:
+        example: 255
         type: integer
       id:
+        example: 1
         type: integer
       poster_url:
+        example: https://imgs.search.brave.com/8beLkj9LsaTyqIIEdbEELICTyQJkSQnTz6UQfl4x5oI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLmVi/YXlpbWcuY29tL2lt/YWdlcy9nL3hwNEFB/ZVN3cGNwb2xKRFQv/cy1sMjI1LmpwZw
         type: string
       released_at:
+        example: "2025-10-30T00:00:00Z"
         type: string
       synopsis:
+        example: A man that can manipulate every string variable
         type: string
       title:
+        example: Lord of the Strings
         type: string
     type: object
   service.UpdateMovieInput:
@@ -102,11 +108,13 @@ paths:
               $ref: '#/definitions/service.Movie'
             type: array
         "400":
-          description: Error de validación en parámetros
+          description: Error de validación de los parámetros" // {"message":"invalid
+            page number"}
           schema:
             $ref: '#/definitions/api.JsonError'
         "500":
-          description: Error interno del servidor
+          description: "Error interno del servidor\" \t\t\t// {\"message\":\"internal
+            server error\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
       summary: Lista películas paginadas
@@ -115,8 +123,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Agrega una nueva película al catálogo usando el formato JSON. La
-        URL del póster puede omitirse.
+      description: Agrega una nueva película al catálogo. La URL del póster puede
+        omitirse.
       parameters:
       - description: Número de página
         in: body
@@ -127,18 +135,23 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: Lista de películas exitosa
+        "201":
+          description: Película agregada exitosamente
           schema:
-            items:
-              $ref: '#/definitions/service.Movie'
-            type: array
+            $ref: '#/definitions/service.Movie'
         "400":
-          description: Error de validación en parámetros
+          description: Error de validación de los parámetros" // {"message":"invalid
+            page number"}
+          schema:
+            $ref: '#/definitions/api.JsonError'
+        "409":
+          description: "Error de duplicacion de recursos\" \t\t// {\"message\":\"the
+            given movie already exists\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
         "500":
-          description: Error interno del servidor
+          description: "Error interno del servidor\"\t\t\t// {\"message\":\"internal
+            server error\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
       summary: Agrega una película
@@ -148,7 +161,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Borra una película del catálogo permanentemente con su ID.
+      description: Borra una película dada por ID permanentemente del catálogo.
       parameters:
       - description: ID de la película a eliminar
         in: path
@@ -161,15 +174,18 @@ paths:
         "204":
           description: Película eliminada exitosamente
         "400":
-          description: Película no eliminable
+          description: Error de validación de los parámetros" // {"message":"invalid
+            path identifier"}
           schema:
             $ref: '#/definitions/api.JsonError'
         "404":
-          description: Película no encontrada
+          description: "Error por película no encontrada\"\t\t// {\"message\":\"invalid
+            movie identifier\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
         "500":
-          description: Error interno del servidor
+          description: "Error interno del servidor\"\t\t\t// {\"message\":\"internal
+            server error\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
       summary: Borra una película
@@ -178,7 +194,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Obtiene toda la información asociada a una película dado su ID.
+      description: Obtiene toda la información asociada a una película dada por ID.
       parameters:
       - description: ID de la película a obtener
         in: path
@@ -190,12 +206,21 @@ paths:
       responses:
         "200":
           description: Película obtenida exitosamente
+          schema:
+            $ref: '#/definitions/service.Movie'
+        "400":
+          description: Error de validación de los parámetros" // {"message":"invalid
+            path identifier"}
+          schema:
+            $ref: '#/definitions/api.JsonError'
         "404":
-          description: Película no encontrada
+          description: "Error por película no encontrada\" \t\t// {\"message\":\"invalid
+            movie identifier\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
         "500":
-          description: Error interno del servidor
+          description: "Error interno del servidor\"\t\t\t// {\"message\":\"internal
+            server error\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
       summary: Obtener una película
@@ -204,8 +229,8 @@ paths:
     put:
       consumes:
       - application/json
-      description: Actualiza toda la información de una película. Todos los campos
-        son requeridos.
+      description: Actualiza toda la información de una película dada por ID. Todos
+        los campos son requeridos.
       parameters:
       - description: ID de la película a actualizar
         in: path
@@ -221,22 +246,28 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Actualización de película exitosa
+        "200":
+          description: Película actualizada exitosamente
           schema:
-            items:
-              $ref: '#/definitions/service.Movie'
-            type: array
+            $ref: '#/definitions/service.Movie'
         "400":
-          description: Parámetros inválidos
+          description: Error de validación de los parámetros" // {"message":"invalid
+            path identifier"}
           schema:
             $ref: '#/definitions/api.JsonError'
         "404":
-          description: Película no encontrada
+          description: "Error por película no encontrada\"\t\t// {\"message\":\"invalid
+            movie identifier\"}"
+          schema:
+            $ref: '#/definitions/api.JsonError'
+        "409":
+          description: "Error de duplicacion de recursos\" \t\t// {\"message\":\"the
+            given movie already exists\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
         "500":
-          description: Error interno del servidor
+          description: "Error interno del servidor\"\t\t\t// {\"message\":\"internal
+            server error\"}"
           schema:
             $ref: '#/definitions/api.JsonError'
       summary: Actualiza los datos de una película
