# internal/api/handlers_movie.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"encoding/json"
+	"errors"
 	"net/http"
 
 	"github.com/Matias914/Web-Page/internal/service"
@@ -15,8 +16,8 @@ import (
 // @Param		page	query		int		true	"Número de página"
 // @Param       rows	query		int		true	"Cantidad de filas por página"
 // @Success     200		{array}		service.Movie	"Lista de películas exitosa"
-// @Failure		400		{object}	api.JsonError 	"Error de validación en parámetros"
-// @Failure		500		{object}	api.JsonError 	"Error interno del servidor"
+// @Failure		400		{object}	api.JsonError 	"Error de validación de los parámetros" // {"message":"invalid page number"}
+// @Failure		500		{object}	api.JsonError 	"Error interno del servidor" 			// {"message":"internal server error"}
 // @Router		/movies [get]
 func (api *API) handleGetMovies(w http.ResponseWriter, r *http.Request) {
 	page, rows, err := api.handlePageAndRowsParsing(r)
@@ -26,21 +27,22 @@ func (api *API) handleGetMovies(w http.ResponseWriter, r *http.Request) {
 	}
 	movies, err := api.MovieService.GetMoviesList(r.Context(), page, rows)
 	if err != nil {
-		api.handleErrorResponse(w, http.StatusBadRequest, err)
+		api.handleErrorResponse(w, http.StatusInternalServerError, err)
 		return
 	}
 	api.handleJsonResponse(w, http.StatusOK, movies)
 }
 
 // @Summary		Agrega una película
-// @Description	Agrega una nueva película al catálogo usando el formato JSON. La URL del póster puede omitirse.
+// @Description	Agrega una nueva película al catálogo. La URL del póster puede omitirse.
 // @Tags		Movies
 // @Accept		json
 // @Produce		json
 // @Param		movie	body		service.AddMovieInput  true	"Número de página"
-// @Success     200		{array}		service.Movie				"Lista de películas exitosa"
-// @Failure		400		{object}	api.JsonError 				"Error de validación en parámetros"
-// @Failure		500		{object}	api.JsonError 				"Error interno del servidor"
+// @Success     201		{object}	service.Movie				"Película agregada exitosamente"
+// @Failure		400		{object}	api.JsonError 				"Error de validación de los parámetros" // {"message":"invalid page number"}
+// @Failure		409		{object}	api.JsonError 				"Error de duplicacion de recursos" 		// {"message":"the given movie already exists"}
+// @Failure		500		{object}	api.JsonError 				"Error interno del servidor"			// {"message":"internal server error"}
 // @Router		/movies [post]
 func (api *API) handlePostMovie(w http.ResponseWriter, r *http.Request) {
 	var movie service.AddMovieInput
@@ -54,21 +56,29 @@ func (api *API) handlePostMovie(w http.ResponseWriter, r *http.Request) {
 	}
 	inserted, err := api.MovieService.AddMovie(r.Context(), movie)
 	if err != nil {
-		api.handleErrorResponse(w, http.StatusBadRequest, err)
+		switch {
+		case errors.Is(err, service.ErrInvalidMovie):
+			api.handleErrorResponse(w, http.StatusBadRequest, err)
+		case errors.Is(err, service.ErrMovieDuplicated):
+			api.handleErrorResponse(w, http.StatusConflict, err)
+		default:
+			api.handleErrorResponse(w, http.StatusInternalServerError, err)
+		}
 		return
 	}
 	api.handleJsonResponse(w, http.StatusCreated, inserted)
 }
 
 // @Summary		Obtener una película
-// @Description	Obtiene toda la información asociada a una película dado su ID.
+// @Description	Obtiene toda la información asociada a una película dada por ID.
 // @Tags		Movies
 // @Accept		json
 // @Produce		json
 // @Param		id		path		int		true	"ID de la película a obtener"
-// @Success     200									"Película obtenida exitosamente"
-// @Failure		404		{object}	api.JsonError 	"Película no encontrada"
-// @Failure		500		{object}	api.JsonError 	"Error interno del servidor"
+// @Success     200		{object}	service.Movie	"Película obtenida exitosamente"
+// @Failure     400		{object}	api.JsonError	"Error de validación de los parámetros" // {"message":"invalid path identifier"}
+// @Failure		404		{object}	api.JsonError 	"Error por película no encontrada" 		// {"message":"invalid movie identifier"}
+// @Failure		500		{object}	api.JsonError 	"Error interno del servidor"			// {"message":"internal server error"}
 // @Router		/movies/{id} 		[get]
 func (api *API) handleGetMovie(w http.ResponseWriter, r *http.Request) {
 	id, err := api.handleSingleIdentifierParsing(r)
@@ -78,23 +88,29 @@ func (api *API) handleGetMovie(w http.ResponseWriter, r *http.Request) {
 	}
 	movie, err := api.MovieService.GetMovie(r.Context(), id)
 	if err != nil {
-		api.handleErrorResponse(w, http.StatusNotFound, err)
+		switch {
+		case errors.Is(err, service.ErrMovieNotFound):
+			api.handleErrorResponse(w, http.StatusNotFound, err)
+		default:
+			api.handleErrorResponse(w, http.StatusInternalServerError, err)
+		}
 		return
 	}
 	api.handleJsonResponse(w, http.StatusOK, movie)
 }
 
 // @Summary		Actualiza los datos de una película
-// @Description	Actualiza toda la información de una película. Todos los campos son requeridos.
+// @Description	Actualiza toda la información de una película dada por ID. Todos los campos son requeridos.
 // @Tags		Movies
 // @Accept		json
 // @Produce		json
 // @Param		id		path		int		      			  true	"ID de la película a actualizar"
 // @Param		movie	body		service.UpdateMovieInput  true	"Número de página"
-// @Success     201		{array}		service.Movie					"Actualización de película exitosa"
-// @Failure		400		{object}	api.JsonError 					"Parámetros inválidos"
-// @Failure		404		{object}	api.JsonError 					"Película no encontrada"
-// @Failure		500		{object}	api.JsonError 					"Error interno del servidor"
+// @Success     200		{object}	service.Movie					"Película actualizada exitosamente"
+// @Failure		400		{object}	api.JsonError 					"Error de validación de los parámetros" // {"message":"invalid path identifier"}
+// @Failure		404		{object}	api.JsonError 					"Error por película no encontrada"		// {"message":"invalid movie identifier"}
+// @Failure		409		{object}	api.JsonError 					"Error de duplicacion de recursos" 		// {"message":"the given movie already exists"}
+// @Failure		500		{object}	api.JsonError 					"Error interno del servidor"			// {"message":"internal server error"}
 // @Router		/movies/{id} 		[put]
 func (api *API) handlePutMovie(w http.ResponseWriter, r *http.Request) {
 	id, err := api.handleSingleIdentifierParsing(r)
@@ -113,22 +129,31 @@ func (api *API) handlePutMovie(w http.ResponseWriter, r *http.Request) {
 	}
 	updated, err := api.MovieService.UpdateMovie(r.Context(), id, movie)
 	if err != nil {
-		api.handleErrorResponse(w, http.StatusBadRequest, err)
+		switch {
+		case errors.Is(err, service.ErrInvalidMovie):
+			api.handleErrorResponse(w, http.StatusBadRequest, err)
+		case errors.Is(err, service.ErrMovieDuplicated):
+			api.handleErrorResponse(w, http.StatusConflict, err)
+		case errors.Is(err, service.ErrMovieNotFound):
+			api.handleErrorResponse(w, http.StatusNotFound, err)
+		default:
+			api.handleErrorResponse(w, http.StatusInternalServerError, err)
+		}
 		return
 	}
-	api.handleJsonResponse(w, http.StatusCreated, updated)
+	api.handleJsonResponse(w, http.StatusOK, updated)
 }
 
 // @Summary		Borra una película
-// @Description	Borra una película del catálogo permanentemente con su ID.
+// @Description	Borra una película dada por ID permanentemente del catálogo.
 // @Tags		Movies
 // @Accept		json
 // @Produce		json
 // @Param		id		path		int		true	"ID de la película a eliminar"
 // @Success     204									"Película eliminada exitosamente"
-// @Failure		400		{object}	api.JsonError 	"Película no eliminable"
-// @Failure		404		{object}	api.JsonError 	"Película no encontrada"
-// @Failure		500		{object}	api.JsonError 	"Error interno del servidor"
+// @Failure		400		{object}	JsonError 	"Error de validación de los parámetros" // {"message":"invalid path identifier"}
+// @Failure		404		{object}	JsonError 	"Error por película no encontrada"		// {"message":"invalid movie identifier"}
+// @Failure		500		{object}	JsonError 	"Error interno del servidor"			// {"message":"internal server error"}
 // @Router		/movies/{id} 		[delete]
 func (api *API) handleDeleteMovie(w http.ResponseWriter, r *http.Request) {
 	id, err := api.handleSingleIdentifierParsing(r)
@@ -138,7 +163,12 @@ func (api *API) handleDeleteMovie(w http.ResponseWriter, r *http.Request) {
 	}
 	err = api.MovieService.DeleteMovie(r.Context(), id)
 	if err != nil {
-		api.handleErrorResponse(w, http.StatusBadRequest, err)
+		switch {
+		case errors.Is(err, service.ErrMovieNotFound):
+			api.handleErrorResponse(w, http.StatusNotFound, err)
+		default:
+			api.handleErrorResponse(w, http.StatusInternalServerError, err)
+		}
 		return
 	}
 	api.handleJsonResponse(w, http.StatusNoContent, nil)
